docs: refactored swagger-autogen notations and added more info
