# swagger-output.json
@@ -5,7 +5,7 @@
     "title": "Symple Login System",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
-  "host": "https://login-system-trabalhadores.herokuapp.com/",
+  "host": "login-system-trabalhadores.herokuapp.com",
   "basePath": "/",
   "tags": [
     {
@@ -27,7 +27,7 @@
     "application/json"
   ],
   "paths": {
-    "/": {
+    "/user": {
       "get": {
         "tags": [
           "User"
@@ -37,6 +37,7 @@
           {
             "name": "authorization",
             "in": "header",
+            "description": "JWT Token given at login. Expires in 1d.",
             "type": "string"
           }
         ],
@@ -56,25 +57,27 @@
         "tags": [
           "User"
         ],
-        "description": "Endpoint to create users.",
+        "description": "Endpoint to create users.   \n#swagger.path = ",
         "parameters": [
           {
-            "name": "body",
+            "name": "obj",
             "in": "body",
+            "description": "User data.",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "email": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "string"
                 },
-                "req": {
-                  "example": "any"
+                "username": {
+                  "type": "string",
+                  "example": "string"
                 },
                 "password": {
-                  "example": "any"
-                },
-                "id": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "string"
                 }
               }
             }
@@ -96,7 +99,7 @@
         }
       }
     },
-    "/{id}": {
+    "/user/{id}": {
       "put": {
         "tags": [
           "User"
@@ -112,7 +115,23 @@
           {
             "name": "authorization",
             "in": "header",
+            "description": "JWT Token given at login. Expires in 1d.",
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -142,6 +161,7 @@
           {
             "name": "authorization",
             "in": "header",
+            "description": "JWT Token given at login. Expires in 1d.",
             "type": "string"
           }
         ],
@@ -161,7 +181,7 @@
         }
       }
     },
-    "/login": {
+    "/auth/login": {
       "post": {
         "tags": [
           "Auth"
